# ihp-mcp

./: .gitignore  README.md  cabal.project
.github/workflows/: ci.yml
ihp-mcp/: Schema.sql  ihp-mcp.cabal
ihp-mcp/src/IHP/MCP/: Auth.hs
ihp-mcp/src/IHP/MCP/OAuth/: Endpoints.hs
ihp-mcp/test/: Spec.hs  schema.sql
mcp-server/: mcp-server.cabal
mcp-server/src/MCP/: OAuth.hs
mcp-server/src/MCP/OAuth/: WellKnown.hs
mcp-server/src/MCP/Protocol/: Server.hs  Tool.hs  Types.hs
mcp-server/test/: Main.hs
